<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.ExistingUserFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_address_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/primary"
            android:textSize="22sp"
            android:textColorPrimary="@android:color/white"
            android:colorAccent="@android:color/white"
            android:colorControlNormal="@android:color/white"
            android:colorControlActivated="@android:color/white"
            app:boxBackgroundColor="@android:color/white"
            app:boxCornerRadiusTopStart="16dp"
            app:boxCornerRadiusTopEnd="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:drawableStart="@drawable/ic_mail" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/primary"
            android:textSize="22sp"
            android:textColorPrimary="@android:color/white"
            android:colorAccent="@android:color/white"
            android:colorControlNormal="@android:color/white"
            android:colorControlActivated="@android:color/white"
            app:boxBackgroundColor="@android:color/white"
            app:passwordToggleEnabled = "true"
            app:boxCornerRadiusBottomStart="16dp"
            app:endIconMode="clear_text"
            app:boxCornerRadiusBottomEnd="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_address_container">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:drawableStart="@drawable/ic_lock" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_btn"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/text_button_login"
            android:backgroundTint="@color/primary_dark"
            android:colorButtonNormal="@color/primary_dark"
            android:colorControlHighlight="@color/primary"
            android:textColor="@android:color/white"
            android:layout_gravity="center_horizontal"
            app:cornerRadius="16dp"
            android:layout_marginTop="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_content"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:clickable="true"
            android:focusable="true"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_btn"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>